fix(styles): comments could overflow their container with code or other long words

--- a/src/PublicBundle/Resources/styles/modules/blog.scss
+++ b/src/PublicBundle/Resources/styles/modules/blog.scss
@@ -2,6 +2,10 @@
 .comment-respond{
 	@extend %block;
 }
+.commentContent{
+	//-# comments can have long code "words" that can overflow their container
+	overflow: auto;
+}
 .commentsList{
 	&, & .children{
 		@extend %block;
